# ros_gpg

./: CMakeLists.txt  package.xml
cfg/: params.cfg
include/: cloud_camera.h
include/gpg/: cloud_camera.h  local_frame.h
src/: camera_trans.cpp  generate_candidates.cpp
src/ros_gpg/: candidates_generator.cpp  cloud_camera.cpp  grasp_set.cpp  plot.cpp
