<?xml version="1.0"?>
<package>
  <name>ros_gpg</name>
  <version>0.0.0</version>
  <description>The ros_gpg package</description>

  <maintainer email="demo@todo.todo">demo</maintainer>
  <license>TODO</license>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>cmake_modules</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
